# go_rust_piping

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  justfile
client/: main.go  zap.go  zap_test.go
client/allocator/: cgo.go
client/cmd/: main.go
client/mem/: cgo.go
client/testdata/: testadata.go
client/zap/: channels.go  start.go  stream.go
zap/: Cargo.toml  build.rs
zap/src/: contract.rs  lib.rs  pipe.rs  table.rs
