[package]
name = "zap"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
anyhow = "1.0"
datafusion = { version = "44.0", default-features = false }
datafusion-substrait = "44.0"
arrow = { version = "53.0", features = ["ffi"] }
arrow-schema = { version = "53.0", features = ["ffi"] }
arrow-data = { version = "53.0", features = ["ffi"] }
futures = "0.3"
libc = "0.2"
async-trait = "0.1"
tikv-jemallocator = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cbindgen = "*"

[lib]
crate-type=["staticlib"]
